Update title and header for highscore page

--- a/highscores.html
+++ b/highscores.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>1-minuttsgangen – Highscore</title>
+  <title>Gangespillet – Highscore</title>
   <style>
     body{
       margin:0;
@@ -144,7 +144,7 @@
 <body>
   <div class="wrap">
     <div class="header">
-      <h1>1-minuttsgangen</h1>
+      <h1>Gangespillet</h1>
       <img class="logo" src="logo.png" alt="Logo" />
     </div>
 
