Change column header from 'Snitt' to 'Poeng'

--- a/highscores.html
+++ b/highscores.html
@@ -177,7 +177,7 @@
             <tr>
               <th style="width:70px;">#</th>
               <th>Klasse</th>
-              <th style="width:180px;">Snitt</th>
+              <th style="width:180px;">Poeng</th>
             </tr>
           </thead>
           <tbody id="rowsClass"></tbody>
